# hatchet-rust-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROMPT.md  README.md  WORK_CHECKPOINTS.md  build.rs
.github/: CODEOWNERS
.github/workflows/: check.yml  release.yml  test.yml
api-contracts/openapi/components/schemas/v1/: workflow_run.yaml
api-contracts/protos/: workflows.proto
examples/: .env.example  Cargo.toml  Justfile  README.md  concurrency.rs  dag.rs  dynamic_child_spawning.rs  error.rs  flow_control.rs  input_json_schema.rs  rate_limits.rs  simple.rs  streaming.rs  worker.rs  workflow_concurrency.rs
examples/src/: flow_control.rs  worker.rs  workflow_concurrency.rs
scripts/: generate
src/: api.rs  client.rs  config.rs  context.rs  error.rs  lib.rs  models.rs  task.rs  utils.rs  worker.rs  workflow.rs
src/clients/: admin_client.rs  client.rs  dispatcher_client.rs  event_client.rs  hatchet.rs  mod.rs  workflow_client.rs
src/clients/grpc/: admin_client.rs  dispatcher_client.rs  event_client.rs  mod.rs  workflow_client.rs
src/clients/rest/: mod.rs
src/clients/rest/apis/: api_token_api.rs  cel_api.rs  configuration.rs  default_api.rs  event_api.rs  filter_api.rs  github_api.rs  healthcheck_api.rs  log_api.rs  metadata_api.rs  mod.rs  rate_limits_api.rs  slack_api.rs  sns_api.rs  step_run_api.rs  task_api.rs  tenant_api.rs  user_api.rs  webhook_api.rs  worker_api.rs  workflow_api.rs  workflow_run_api.rs  workflow_runs_api.rs
src/clients/rest/features/: crons.rs  mod.rs  pagination.rs  runs.rs  schedules.rs
src/clients/rest/models/: alert_email_group_create_request.rs  alert_email_group_list_200_response.rs  alert_email_group_list_200_response_rows_inner.rs  api_token_create_200_response.rs  api_token_create_request.rs  api_token_list_200_response.rs  api_token_list_200_response_rows_inner.rs  cron_workflow_list_200_response.rs  cron_workflow_trigger_create_200_response.rs  cron_workflow_trigger_create_request.rs  event_create_bulk_200_response.rs  event_create_bulk_request.rs  event_create_request.rs  event_data_get_200_response.rs  event_list_200_response.rs  event_list_200_response_rows_inner.rs  event_list_200_response_rows_inner_workflow_run_summary.rs  event_update_cancel_200_response.rs  event_update_replay_request.rs  info_get_version_200_response.rs  log_line_list_200_response.rs  log_line_list_200_response_rows_inner.rs  metadata_get_200_response.rs  metadata_get_200_response_auth.rs  metadata_get_200_response_posthog.rs  metadata_list_integrations_200_response_inner.rs  mod.rs  rate_limit_list_200_response.rs  rate_limit_list_200_response_rows_inner.rs  scheduled_workflow_run_create_200_response.rs  scheduled_workflow_run_create_request.rs  slack_webhook_list_200_response.rs  slack_webhook_list_200_response_rows_inner.rs  sns_create_request.rs  sns_list_200_response.rs  sns_list_200_response_rows_inner.rs  step_run_get_200_response.rs  step_run_list_archives_200_response.rs  step_run_list_archives_200_response_rows_inner.rs  step_run_list_events_200_response.rs  (+115 more)
src/features/: runs.rs  workflows.rs
src/grpc/: admin_client.rs  dispatcher_client.rs  event_client.rs  mod.rs  workflow_client.rs  workflows.rs
src/rest/: mod.rs  models.rs
src/runnables/: flow_control.rs  mod.rs  options.rs  runnable.rs  task.rs  workflow.rs
src/tasks/: context.rs  erased.rs  erased_task.rs  mod.rs  task_trait.rs
src/worker/: action_listener.rs  mod.rs  task_dispatcher.rs  task_manager.rs  types.rs  worker.rs
src/workflows/: context.rs  erased_task.rs  mod.rs  task.rs  task_function.rs  task_trait.rs  workflow.rs
tests/: integration_tests.rs  test_job_creation.rs  test_run_returns_job_output.rs
tests/common/: containers.rs  harness.rs  mod.rs  types.rs
