[package]
name = "hatchet-sdk"
description = "Rust SDK for Hatchet"
authors = ["Ethan Wolinsky"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.3"
edition = "2024"

[features]
client = []
worker = []

[dependencies]

async-trait = "0.1.88"
base64 = "0.22"
dyn-clone = "1.0.20"
futures = "0.3.31"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
rustls = { version = "*", features = ["ring"] }
rustls-native-certs = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
testcontainers = "0.25.0"
thiserror = "2"
tokio = "1.46.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = { version = "0.13", features = [
    "channel",
    "_tls-any",
    "tls-native-roots",
] }
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
derive_builder = "0.20.2"


[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }

[dev-dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
mockall = "0.13"
rstest = "0.26.1"
