[package]
name = "hatchet-sdk"
description = "This is an unofficial Rust SDK for Hatchet, a distributed, fault-tolerant task queue."
authors = ["Ethan Wolinsky"]
repository = "https://github.com/eswolinsky3241/hatchet-rust-sdk"
license = "Apache-2.0"
# Version is dynamically set to GitHub release tag
version = "0.0.0"
edition = "2024"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.88"
base64 = "0.22"
derive_builder = "0.20.2"
dyn-clone = "1.0.20"
futures = "0.3.31"
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.13.1", features = ["json", "multipart", "rustls", "query"] }
rustls = { version = "0.23.31", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tokio-util = "0.7.15"
tonic = { version = "0.14", features = [
    "channel",
    "_tls-any",
    "tls-native-roots",
] }
tonic-prost = "0.14"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
log = "0.4.28"


[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.8"
schemars = "0.8"
testcontainers = "0.26.3"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "worker"
path = "examples/worker.rs"

[[example]]
name = "dag"
path = "examples/dag.rs"

[[example]]
name = "error"
path = "examples/error.rs"

[[example]]
name = "dynamic_child_spawning"
path = "examples/dynamic_child_spawning.rs"

[[example]]
name = "input_json_schema"
path = "examples/input_json_schema.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"
